--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: noteapp
+name: iMomentum
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -35,7 +35,11 @@ dependencies:
   sqflite: ^1.1.7
   path_provider: ^1.3.0
   font_awesome_flutter: ^8.8.1
-  webview_flutter: ^0.3.21
+#  webview_flutter: ^0.3.21
+#  table_calendar: ^2.2.3
+  provider: ^4.1.2
+  shared_preferences: '>=0.5.7+3 <2.0.0'
+
 
 dev_dependencies:
   flutter_test:
