--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,16 +5,6 @@ description: A new Flutter application.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -23,8 +13,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -36,35 +24,69 @@ dependencies:
   path_provider: ^1.3.0
   font_awesome_flutter: ^8.8.1
 #  webview_flutter: ^0.3.21
-#  table_calendar: ^2.2.3
-  provider: ^4.1.2
+  table_calendar: ^2.2.3
+#  provider: ^4.1.2
   shared_preferences: '>=0.5.7+3 <2.0.0'
+  transparent_image: ^1.0.0
+  cached_network_image: ^2.2.0+1
+  flutter_blurhash: ^0.5.0
+  flutter_staggered_grid_view: ^0.3.0
+#  provider: ^4.0.5
+  flutter_svg: ^0.17.4  #??
+  google_fonts: ^1.0.0
+  styled_widget: ^0.2.1+2 #??
+  flutter_icons: ^1.1.0  #??
+  url_launcher: ^5.4.5
+  responsive_framework: ^0.0.4  #??
+  assets_audio_player: ^1.3.8
+  tinycolor: ^1.0.2  #??
+  flutter_localizations:  #??
+    sdk: flutter
+  date_utils: ^0.1.0+2  #??
+  auto_size_text: ^2.1.0
+#  hive: ^1.4.1+1
+#  hive_flutter: ^0.3.0+2
+  modal_bottom_sheet: ^0.1.6+1
+  curved_navigation_bar: ^0.3.2
+  animated_text_kit: ^2.0.0
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+#  hive_generator: ^0.7.0+2
+#  build_runner: ^1.8.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+#dependency_overrides:
+##  quiver: 2.1.3
+#  dartx: ^0.3.0
 
-# The following section is specific to Flutter.
+#  intl_translation: ^0.17.9
+
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
-  - images/
+    - assets/
+    - images/
+    - google_fonts/
 
-  fonts:
-  - family: Spartan MB
-    fonts:
-    - asset: fonts/SpartanMB-Black.otf
-      weight: 900
+
+#
+#flutter_intl:
+#  enabled: true
+
+  # To add assets to your application, add an assets section, like this:
+
+
+
+#  fonts:
+#  - family: Spartan MB
+#    fonts:
+#    - asset: fonts/SpartanMB-Black.otf
+#      weight: 900
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
