--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   cached_network_image: ^2.2.0+1
   flutter_blurhash: ^0.5.0
   flutter_staggered_grid_view: ^0.3.0
-#  provider: ^4.0.5
   flutter_svg: ^0.17.4  #??
   google_fonts: ^1.0.0
   styled_widget: ^0.2.1+2 #??
@@ -40,8 +39,8 @@ dependencies:
   responsive_framework: ^0.0.4  #??
   assets_audio_player: ^1.3.8
   tinycolor: ^1.0.2  #??
-  flutter_localizations:  #??
-    sdk: flutter
+#  flutter_localizations:  #??
+#    sdk: flutter
   date_utils: ^0.1.0+2  #??
   auto_size_text: ^2.1.0
 #  hive: ^1.4.1+1
@@ -49,8 +48,6 @@ dependencies:
   modal_bottom_sheet: ^0.1.6+1
   curved_navigation_bar: ^0.3.2
   animated_text_kit: ^2.0.0
-
-
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +66,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/
+#    - assets/
     - images/
     - google_fonts/
 
